EXTRA_DIST = games.glade \
			 servers.glade \
			 scripts/server_detection/4097.py

gfire_datadir = $(datadir)/purple/gfire
gfire_data_scriptsdir = $(gfire_datadir)/scripts
gfire_data_server_detectiondir = $(gfire_data_scriptsdir)/server_detection
gfire_data_server_detection_toolsdir = $(gfire_data_server_detectiondir)/tools

gfire_data_DATA = games.glade servers.glade
gfire_data_scripts_DATA =
gfire_data_server_detection_DATA = scripts/server_detection/4097.py
gfire_data_server_detection_tools_DATA =
