EXTRA_DIST = 	16/gfire.png	\
		22/gfire.png	\
		48/gfire.png

pidginprotocolpix16dir = $(datadir)/pixmaps/pidgin/protocols/16
pidginprotocolpix22dir = $(datadir)/pixmaps/pidgin/protocols/22
pidginprotocolpix48dir = $(datadir)/pixmaps/pidgin/protocols/48

pidginprotocolpix16_DATA = 16/gfire.png
pidginprotocolpix22_DATA = 22/gfire.png
pidginprotocolpix48_DATA = 48/gfire.png
