EXTRA_DIST = 	16/gfire.png \
		22/gfire.png \
		48/gfire.png

pidgin_protocol_pix16dir = $(datadir)/pixmaps/pidgin/protocols/16
pidgin_protocol_pix22dir = $(datadir)/pixmaps/pidgin/protocols/22
pidgin_protocol_pix48dir = $(datadir)/pixmaps/pidgin/protocols/48

pidgin_protocol_pix16_DATA = 16/gfire.png
pidgin_protocol_pix22_DATA = 22/gfire.png
pidgin_protocol_pix48_DATA = 48/gfire.png
